--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,6 @@ matrix:
   allow_failures:
   - php: nightly
 
-sudo: false
-
 env:
   - COMPOSER_OPTS=""
   - COMPOSER_OPTS="--prefer-lowest"
@@ -32,3 +30,5 @@ jobs:
 
 git:
   depth: 5
+
+group: travis_latest
