--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "phpstan/phpstan": "^0.10.3",
         "phpstan/phpstan-mockery": "^0.10.1",
         "phpstan/phpstan-phpunit": "^0.10.0",
+        "squizlabs/php_codesniffer": "^3.4",
         "phpunit/phpunit": "^7.0"
     },
     "autoload": {
